--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="description__inner flex_between">
                 <div class="description__item flex_around">
                     <div class="description__img">
-                        <img src="./images/write-icon.png" alt="icon">
+                        <img src="./images/Write-icon.png" alt="icon">
                     </div>
                     <div class="description__text">
                         <div class="text_left">
