--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="./images/icon-twitter.svg" alt="icon">
                 </a>
                 <a class="social-link" href="#" target="_parent">
-                    <img src="./images/icon-skype.svg" alt="skype">
+                    <img src="./images/icon-skype.svg" alt="icon">
                 </a>
                 <a class="social-link" href="#" target="_parent">
                     <img src="./images/icon-linkedin.svg" alt="icon">
